Brisanje studenta servlet

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -33,7 +33,7 @@
       <url-pattern>/vezbaServleti/listajStudente.html</url-pattern>
     </servlet-mapping>
     
-    <servlet> 
+     <servlet> 
       <servlet-name>ObrisiStudenta</servlet-name>
       <servlet-class>com.skolamaric.servllets.ObrisiStudenta</servlet-class>
     </servlet>
@@ -42,5 +42,19 @@
       <servlet-name>ObrisiStudenta</servlet-name>
       <url-pattern>/vezbaServleti/obrisiStudenta.html</url-pattern>
     </servlet-mapping>
+   
+      <servlet> 
+      <servlet-name>PrikaziStudenta</servlet-name>
+      <servlet-class>com.skolamaric.servllets.PrikaziStudenta</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+      <servlet-name>PrikaziStudenta</servlet-name>
+      <url-pattern>/vezbaServleti/prikaziStudenta.html</url-pattern>
+    </servlet-mapping>
+    
+   
+    
+    
   
 </web-app>
