--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -65,6 +65,15 @@
       <url-pattern>/vezbaServleti/handleFile.html</url-pattern>
     </servlet-mapping>
     
+      <servlet> 
+      <servlet-name>LoginServlet</servlet-name>
+      <servlet-class>com.skolamaric.servllets.LoginServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+      <servlet-name>LoginServlet</servlet-name>
+      <url-pattern>/vezbaSecurity/loginServlet.html</url-pattern>
+    </servlet-mapping>
     
   
 </web-app>
